<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/bg_login"
    android:fitsSystemWindows="true">

<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:background="@color/bg_login"
    >
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <ImageView
        android:layout_width="250dp"
        android:layout_height="130dp"
        android:paddingBottom="5dp"
        android:src="@drawable/splashlogo_xhdpi"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="1dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_txtinput_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/signup_first_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white"
                    android:hint="@string/hint_first_name"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/input_login"
                    android:textColorHint="@color/input_login_hint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_txtinput_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/signup_email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/input_login"
                    android:textColorHint="@color/input_login_hint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_txtinput_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/signup_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />
        </android.support.design.widget.TextInputLayout>
        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signup_countries_spinner"
            android:background="@color/white"
            android:layout_marginBottom="10dp"

            />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/signup_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/hint_phone_code"
                android:inputType="phone"
                android:focusable="false"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:text="-"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_txtinput_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/signup_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white"
                    android:hint="@string/hint_phone_number"
                    android:inputType="phone"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/input_login"
                    android:textColorHint="@color/input_login_hint" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <!-- Login Button -->

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:id="@+id/register_gender_spinner"
            android:entries="@array/gender"
            android:layout_marginBottom="10dp"

            />

        <Button
            android:id="@+id/btnregister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/btn_login_bg"
            android:text="@string/btn_register"
            android:textColor="@color/btn_login" />


    </LinearLayout>


</LinearLayout>
</ScrollView>

</android.support.design.widget.CoordinatorLayout>