<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >
    <android.support.design.widget.AppBarLayout
        android:id="@+id/add_disciple_actionbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
       >

        <android.support.v7.widget.Toolbar
            android:id="@+id/add_disciple_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="10dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_collapseMode="parallax" />

        </android.support.design.widget.AppBarLayout>

<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical|center_horizontal"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                >


                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <LinearLayout
                        style="@style/Widget.CardContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="#fff"
                            android:gravity="center"
                            android:textSize="20dp"
                            android:text="Add your testimony "
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="25dp"
            >

    <LinearLayout
        style="@style/Widget.CardContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <android.support.design.widget.TextInputLayout
            android:id="@+id/testimony_inputtxt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_testimony_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white"
                    android:hint="@string/hint_testimony_name"
                    android:inputType="text"
                    android:lines="10"
                    android:padding="10dp"
                    android:textColor="@color/input_login"
                    android:textColorHint="@color/input_login_hint" />
    </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/testimony_inputtxt_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_testimony_detail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white"
                    android:hint="@string/hint_testimony_detail"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:lines="10"
                    android:textColor="@color/input_login"
                    android:textColorHint="@color/input_login_hint" />

    </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_testimony_add"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@color/btn_login_bg"
                    android:text="@string/send_testimony"
                    android:textColor="@color/btn_login" />
            </LinearLayout>
    </android.support.v7.widget.CardView>
    </LinearLayout>
   </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>

